--- a/css/prototype.css
+++ b/css/prototype.css
@@ -35,14 +35,24 @@ li.selected{
 }
 
 /* content */
+/*#sortable{
+	cursor: move;
+}*/
+
+.lead{
+	color: #666;
+	/*font-size: 1.2em;*/
+	padding-left: .5em;
+	border-left: 3px solid #ddd;
+}
 
 #content {
-	background-color: #ebeced;
+	  background-color: #ebeced;
     padding: 20px;
 }
 
 #title {
-	font-weight: bold;
+	  font-weight: bold;
     font-size: 22px;
 }
 
@@ -52,6 +62,43 @@ li.selected{
     text-align: left;
     margin-top: 7px;
     margin-bottom: 7px;
+}
+
+#paginated-content{
+	white-space: pre-wrap; /* respect line breaks */
+	margin-bottom: 10px;
+	position: relative;
+	top: 0;
+	left: 0;
+}
+
+.articleTextPage {
+		width: 250px;
+	  background-color: #fff;
+    /*border: 1px solid black;*/
+		box-shadow: 1px 1px 3px #999;
+    padding: 25px;
+		font-size: .8em;
+		line-height: 1.15em;
+		margin: 0 auto; /* this line will place the pages horizontally centered in the window */
+		position: relative;
+		/* the top values will vary accod=rding to the page and will be set via JS */
+}
+
+#img-gallery{
+	width: 280px; /* same as .articleTextPage + padding - img border*/
+	margin: 0 auto; /* this line will place the pages horizontally centered in the window */
+	margin-bottom: 10px;
+	position: relative;
+	top: 0;
+	left: 0;
+}
+
+#img-gallery img{
+	box-shadow: 1px 1px 3px #999;
+	border: 10px solid #fff;
+	width: 100%;
+	position: relative;
 }
 
 #TextCard1 {
