added personal explore

--- a/css/prototype.css
+++ b/css/prototype.css
@@ -296,6 +296,9 @@ li.selected{
 /* explore public */
 #tab1 img{width: 100%;}
 
+/* explore personal*/
+#tab2 img {
+    width: 100%;}
 
 /* bottom */
 
