--- a/css/prototype.css
+++ b/css/prototype.css
@@ -101,6 +101,7 @@ body{font-family: 'liberation_serifregular' ;}
 
 li.selected{
 	border-bottom: 3px solid #008080;
+  font-weight: bold;
 }
 
 .intTab li.selected {
@@ -272,6 +273,16 @@ li.selected{
 	margin-top: 7px;
 	margin-bottom: 7px;
 	text-align: center;
+}
+
+#newUpdateHeader{
+  margin-top: 7px;
+  font-size: 18px;
+}
+
+#newUpdateText{
+  margin-top: 7px;
+  margin-bottom: 12px;
 }
 
 #updatetags {
