--- a/css/prototype.css
+++ b/css/prototype.css
@@ -192,10 +192,10 @@ li.selected{
     font-size: 26px;
 }
 
-.fa-share-alt span{
+.articleShares {
 
   font-size:12px;
-  color:#008080;
+  color:#CCCCCC;
   float: right;
 }
 
@@ -243,11 +243,11 @@ li.selected{
     font-size: 22px;
 }
 
-#meta {
+.meta {
     font-size: 14px;
     color: gray;
     text-align: left;
-    margin-top: 7px;
+    margin-top: 12px;
     margin-bottom: 14px;
 }
 
@@ -360,7 +360,7 @@ li.selected{
 
 .poll {
   margin-top: 40px;
-  margin-bottom: 40;
+  margin-bottom: 40px;
   width:80%;
 
 }
