--- a/css/prototype.css
+++ b/css/prototype.css
@@ -254,9 +254,9 @@ li.selected{
 #paginated-content{
 	white-space: pre-wrap; /* respect line breaks */
 	margin-bottom: 10px;
-	position: relative;
+	/*position: relative;
 	top: 0;
-	left: 0;
+	left: 0;*/
 }
 
 .articleTextPage {
@@ -268,7 +268,7 @@ li.selected{
 		font-size: .8em;
 		line-height: 1.15em;
 		margin: 0 auto; /* this line will place the pages horizontally centered in the window */
-		position: relative;
+		/*position: relative;*/
 		/* the top values will vary accod=rding to the page and will be set via JS */
 }
 
@@ -393,6 +393,8 @@ li.selected{
     z-index: 500;
     display: none; 
 }
+
+#comment img{    width: 100%;}
 
 .subscribe {
 
