--- a/css/prototype.css
+++ b/css/prototype.css
@@ -47,7 +47,9 @@
 
 }
 
-body{font-family: 'liberation_serifregular' ;}
+body{font-family: 'liberation_serifregular' ;
+
+}
 
 
 .pagetabs, .intTab, .updateTabs {
@@ -164,11 +166,38 @@ li.selected{
   margin-right: 6px;
 }
 
+/* position and z-index make the navigation and the header to a fixed one (via class .top) */
+
 .header {
 	background-color: black;
 	color: white;
 	padding: 3% 3% 3% 5%;
+ }
+
+.navigation {
+     background-color: #fff;
+   }
+
+#explore {
+  /*position: fixed;*/
+  z-index: 9999;
+  width:100%;
+ 
+  
 }
+
+.top {
+  position: fixed;
+  z-index: 9999;
+  width:100%;
+  margin-top: 0px;
+  
+}
+
+/*.content h2, img {
+ margin-top: 70px;
+
+}*/
 
 .fa-user:before {
 
@@ -230,8 +259,10 @@ li.selected{
 	border-left: 3px solid #ddd;
 }
 
-#content {
+.content {
 	background-color: #ebeced;
+  padding-top: 80px;
+
 }
 
 #article {
@@ -287,7 +318,7 @@ li.selected{
 
 
 #img-gallery{
-	width: 250px; /* same as .articleTextPage + padding - img border*/
+	width: 315px; /* same as .articleTextPage + padding - img border*/
 	margin: 0 auto; /* this line will place the pages horizontally centered in the window */
 	margin-bottom: 10px;
 	position: relative;
@@ -298,7 +329,7 @@ li.selected{
 #img-gallery img{
 	box-shadow: 1px 1px 3px #999;
 	border: 10px solid #fff;
-	width: 230px;
+	width: 290px;
 	position: relative;
 }
 
