--- a/css/prototype.css
+++ b/css/prototype.css
@@ -151,7 +151,8 @@ li.selected{
 #logo{
 	display: inline;
 	font-size: 22px;
-	margin-left: 14px;
+  text-align: left;
+
 }
 
 #service{
@@ -243,6 +244,15 @@ li.selected{
 
 .fa-bookmark {
 }
+.pagetabs li a{width: 100%; height: auto; display: inline-block;  }
+
+object{
+  pointer-events: none;
+  /* This will 'remove' any rights from the <object> of responding to the mouse/pointer.
+  We can use this solution when we don't need :hover support inside the SVG.*/
+}
+
+/* end new code */
 
 /* content */
 /*#sortable{
@@ -258,7 +268,7 @@ li.selected{
 
 .content {
 	background-color: #ebeced;
-  padding-top: 80px;
+  padding-top: 95px;
 
 }
 
@@ -321,14 +331,14 @@ li.selected{
 	position: relative;
 	top: 0;
 	left: 0;
-}
+  }
 
 #img-gallery img{
 	box-shadow: 1px 1px 3px #999;
 	border: 10px solid #fff;
 	width: 290px;
 	position: relative;
-}
+  }
 
 #TextCard1 {
 	text-align:center;
@@ -399,21 +409,105 @@ li.selected{
 
 /* bottom */
 
-#share {
-	background-color: red;
-	color: white;
-	width: 20px;
-    height: 20px;
-    padding: 10px;
-    position: fixed;
-    bottom: 10%;
-    left: 0;
-    z-index: 500;
+#share-content{
+  
+  position: fixed;
+  bottom: 2%;
+  z-index: 500;
 }
 
 
+.label  {
+  text-align: center;
+	background-color: #800000;	
+	width: 30px;
+  height: 30px;
+  padding: 5px;  
+  left: 0;
+  position: fixed;
+  bottom: 10%;
+}
+
+input[type="checkbox"]{display:none;}
+
+.checkbox:checked + .label{
+  border-radius: 5px;
+}
+
+.checkbox:checked ~ .social {
+  opacity:1;
+  -webkit-transform: scale(1) translateX(30px);
+  -moz-transform:scale(1) translateX(30px);
+  -o-transform:scale(1) translateX(30px);
+  transform:scale(1) translateX(30px);
+    -webkit-transition:.5s;
+  -moz-transition:.5s;
+  -o-transition:.5s;
+  transition:.5s;
+}
+
+
+.social {
+  transform-origin:0% 0%;  
+  -webkit-transform: scale(0) translateX(-30px);
+  -moz-transform:scale(0) translateX(-30px);
+  -o-transform:scale(0) translateX(-30px);
+  transform:scale(0) translateX(-30px);
+  -webkit-transition:.5s;
+  -moz-transition:.5s;
+  -o-transition:.5s;
+  transition:.5s;
+  opacity:0;
+}
+.social ul {
+  margin-left :10%;
+  margin-bottom: 30%;
+  color:#fff;
+  height:36px;
+  width:180px;
+  background:#3B5998;
+  padding:0;
+  list-style:none;
+  /*border-left: 20px solid red;
+  border-right: 0px solid red;
+  border-top: -30px solid transparent;
+  border-bottom: -30px solid transparent;*/
+}
+
+.social ul li {
+  font-size:20px;  
+  cursor:pointer;
+  width:60px;
+  margin:0;
+  padding: 10px 0px 17px 0px;
+  text-align:center;
+  float:left;
+  display:block;
+  height:22px;}
+
+/*.social ul:after {
+  content:'';
+  display:block;
+  position:absolute;
+  margin-right:50px auto;
+  height:0;
+  width:0;  
+  border-left: 0px solid red;
+  border-right: 20px solid red;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+}*/
+
+
+#facebook  {background:#3b5998}
+#twitter  {background:#6CDFEA}
+#whatsapp {background:#34af23}
+
+
+/* end share function */
+
 #comment {
-	width: 100%;
+	  width: 100%;
     height: auto;
     position: fixed;
     bottom: 7%;
@@ -453,34 +547,6 @@ li.selected{
 	text-align: center;
 }
 
-/* General navigation svg styles */
-.selected .tab-icon  {   /* the svg selected is turquiose */
-  stroke: #008080;  
-  stroke: 1.5;
-  
-  
-}
-.tab-icon {   /* default svg color when not selected */
-  stroke: #696969;
-  stroke-width: 1;
-  padding-top: 10px;
-  fill: none;
-  }
-
-.selected .svg-element { /*fills the little svg elements when active*/
-fill: #008080;
-}
-
-/*  Style for the explore section svg*/
-
-
-#compass {
- stroke-width: 2;
-
-}
-
-
-/*  Style for the article section svg*/
 
 
 
@@ -493,6 +559,54 @@ fill: #008080;
 } */
 
 /* tour */
-.popover{
+/* .popover{
   width: 276px;
+}*/
+
+/* General navigation svg styles */
+.selected .tab-icon  {   /* the svg selected is turquiose */
+  stroke: #008080;  
+  stroke: 2;
+  
+  
+}
+.tab-icon {   /* default svg color when not selected */
+  stroke: #696969;
+  stroke-width: 1;
+  padding:10px 0px;
+  fill: none;
+  }
+
+.selected .svg-element { /*fills the little svg elements when active*/
+fill: #008080;
+}
+
+/*  Style for the explore section svg*/
+
+#compass {
+ stroke-width: 1;
+
+}
+
+/*  Style for the top menu svgs*/
+
+.main-nav-svg {
+   stroke: white;
+   stroke-width: 0.8;
+
+}
+
+#share {
+ stroke: white;
+ stroke-width: 3;
+ fill: none;
+}
+
+.share-svg {
+ stroke: white;
+ stroke-width: 10;
+ }
+
+#fill-svg {
+  fill: white;
 }
