--- a/css/prototype.css
+++ b/css/prototype.css
@@ -535,8 +535,12 @@ input[type="checkbox"]{display:none;}
 .poll {
   margin-top: 40px;
   margin-bottom: 40px;
-  width:80%;
+  width:100%;
 
+}
+
+.pollresultsArticle {
+  width: 100%;
 }
 
 
