--- a/css/prototype.css
+++ b/css/prototype.css
@@ -64,7 +64,7 @@ body{font-family: 'liberation_serifregular' ;
 .intTab li{
   width: 50%;
 	text-align: center;
-	padding: 22px 0px 10px 0px;
+	padding: 19px 0px 4px 0px;
   background-color: #ccc;
 }
 .updateTabs li{
@@ -178,12 +178,22 @@ li.selected{
      box-shadow: 0px 2px 10px #a8a8a8;
    }
 
+
 #explore {
   /*position: fixed;*/
   z-index: 9999;
-  width:100%;
- 
-  
+  width:100%; 
+}
+
+#headingExplore {
+    padding: 6px 88px 5px 94px;
+    display: flex;
+    margin-bottom: 7px;
+    position: relative;
+    text-align: center;
+    background-color: rgba(0, 128, 128, 0.29);
+    font-family: 'open sans';
+    color: #FFFFFF;
 }
 
 .top {
@@ -274,6 +284,16 @@ object{
 
 }
 
+#headingArticle {
+    padding: 2px 69px 2px 80px;
+    position: relative;
+    text-align: center;
+    background-color: rgba(0, 128, 128, 0.29);
+    font-family: 'open sans';
+    color: #FFFFFF;
+}
+
+
 #article {
 	padding: 20px;
 }
@@ -352,11 +372,12 @@ object{
 	text-align:center;
 }
 
-#GOEXPLORE{
+/* #GOEXPLORE{
 	margin-top: 7px;
 	margin-bottom: 7px;
 	text-align: center;
 }
+*/
 
 #newUpdateHeader{
   margin-top: 20px;
@@ -513,6 +534,17 @@ input[type="checkbox"]{display:none;}
 
 
 /* end share function */
+
+#headingDiscussion {
+    padding: 6px 8px 5px 84px;
+    display: flex;
+    margin-top: 10px;
+    position: relative;
+    text-align: center;
+    background-color: rgba(0, 128, 128, 0.29);
+    font-family: 'open sans';
+    color: #FFFFFF;
+}
 
 #comment {
 	  width: 100%;
