--- a/css/prototype.css
+++ b/css/prototype.css
@@ -553,14 +553,84 @@ input[type="checkbox"]{display:none;}
 }
 
 .poll {
-  margin-top: 120px;
-  margin-bottom: 40px;
+  margin: 50px 20px 70px 0px;
   width:100%;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.poll span {
+  font-size: 19px;  
+  position:relative; 
+  }
+
+#submit-button{
+ font-family: 'Open Sans', sans-serif;
+ font-size: 19px;
+ background-color: #008080;
+ float:right;
+ text-align: center;
+ color:white;
+ border-radius: 50px;
+ border:none;
+ vertical-align: top;
+ padding:13px;
+ position:relative; 
+ margin: 10px;
+}
+
+.pollOptions {
+ background-color:#fff;
+ text-align: center;
+ color: black;
+ border: 1px solid #eee;
+ position:relative;  
+ top: 5px;
+ margin: 10px;
+ float:left;
+ padding:10px;
+ border-radius: 20px;
+ width: 30px;
+}
+
+.clicked {
+ background-color:#008080;
+ opacity: 0.5; 
+ text-align: center;
+ color: black;
+ position:relative;  
+ top: 5px;
+ margin: 10px;
+ float:left;
+ padding:11px;
+ border-radius: 20px;
 
 }
 
-.pollresultsArticle {
-  width: 100%;
+.results {
+ text-align: left;
+ color: white;
+ position:relative;   
+ margin: 10px;
+ padding:10px 5px;
+ /*border-radius: 20px;*/
+}
+
+#Yes {
+  background-color:green;
+  top: 5px;
+  float:left;
+  width:200px;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+#No {
+  background-color:red;
+  top: 5px;
+  float:right;
+  width:60px;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 
@@ -568,10 +638,10 @@ input[type="checkbox"]{display:none;}
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-    height: 40px;
-    text-align: center;
-    background-color: rgba(255,255,255,0.5);
-    padding-top: 10px;
+  height: 40px;
+  text-align: center;
+  background-color: rgba(255,255,255,0.5);
+  padding-top: 10px;
 }
 
 #footer {
