--- a/css/prototype.css
+++ b/css/prototype.css
@@ -267,7 +267,7 @@ li.selected{
 
 .lead{
 	color: #666;
-/*	font-size: 1.2em;*/
+	font-size: 1.2em;
 	padding-left: .5em;
 	border-left: 3px solid #ddd;
 }
